# next-twirp-test

./: Dockerfile.next-app  Dockerfile.server  Dockerfile.twirp-app  Dockerfile.web-client  README.md  heroku.yml
.circleci/: config.yml
next-app/: .babelrc  .env.template  .gitignore  Dockerfile  heroku.yml  i18n.json  next.config.js  package-lock.json  package.json
next-app/components/: PageShell.tsx  RegisterCard.tsx
next-app/lib/: toaster.ts  twirpTransport.ts
next-app/locales/en-us/: common.json
next-app/locales/fr-ca/: common.json
next-app/locales/fr-fr/: common.json
next-app/pages/: _app.tsx  index.tsx  register.tsx
next-app/pages/api/auth/: [...nextauth].ts
next-app/rpc/: twirpTransport.ts
protobufs/: user.proto
server/: .gitignore  Dockerfile  pyproject.toml
twirp-app/: .env.template  .gitignore  Dockerfile  pyproject.toml  server.py
twirp-app/data/: data.py
twirp-app/data/models/: __init__.py  base.py  user.py
twirp-app/data/queries/: __init__.py  user.py
twirp-app/server/: haberdasherImpl.py  server.py  userImpl.py
twirp-app/services/: constants.py  haberdasher_impl.py  user_impl.py
web-client/: .env.template  Dockerfile  package-lock.json  package.json
web-client/pages/: index.tsx
web-client/pages/api/auth/: [...nextauth].ts
